--- a/Forelesning 6/Oppgave 2/src/styles.css
+++ b/Forelesning 6/Oppgave 2/src/styles.css
@@ -1,26 +1,35 @@
-.grid-container{
-
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  width: 700px;
+  grid-gap: 10px;
+  height: 500px;
 }
 
-grid-item {
+.grid-item {
+  border-radius: 5px;
 }
 
-#grid-one{
-    background-color: red;
-    color: red;
+#grid-one {
+  background-color: red;
+  color: red;
+  grid-column: 1/5;
 }
 
-#grid-two{
-    background-color: blue;
-    color: blue;
+#grid-two {
+  background-color: blue;
+  color: blue;
+  grid-area: 2 / 1 / 4 / 3;
 }
 
-#grid-three{
-    background-color: green;
-    color: green;
+#grid-three {
+  background-color: green;
+  color: green;
+  grid-column: 3/5;
 }
 
-.grid-four{
-    background-color: purple;
-    color: purple;
+.grid-four {
+  background-color: purple;
+  color: purple;
+  grid-column: auto;
 }
